Fix issue with drawing space overflowing from the rorking

--- a/client/src/app/components/workspace/workspace.component.scss
+++ b/client/src/app/components/workspace/workspace.component.scss
@@ -1,6 +1,7 @@
 .container {
-    height: 100%;
+    height: 100vh;
     width: 100%;
+    overflow: auto;
     background-color: rgb(175, 178, 189);
     z-index: 0;
 }
